<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/form">

    <ImageView
        style="@style/imgLogo"
        android:src="@drawable/utp" />

    <TextView
        style="@style/tvwTitle"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/etx_code"
        style="@style/etxForm"
        android:hint="@string/ht_code" />

    <EditText
        android:id="@+id/etx_pwd"
        style="@style/etxForm"
        android:hint="@string/ht_pwd"
        android:inputType="textPassword" />

    <Button
        style="@style/btnFormPrimary"
        android:onClick="signIn"
        android:text="@string/btn_sign_in" />

    <Button
        style="@style/btnFormSecondary"
        android:onClick="signUp"
        android:text="@string/btn_sign_up" />

</LinearLayout>
