<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/form">

    <TextView
        style="@style/tvwTitle"
        android:text="@string/title_register" />

    <EditText
        android:hint="@string/ht_name"
        android:id="@+id/etx_name"
        style="@style/etxForm" />

    <EditText
        android:hint="@string/ht_surname"
        android:id="@+id/etx_surname"
        style="@style/etxForm" />
   
    <EditText
        android:hint="@string/ht_pwd"
        android:id="@+id/etx_pwd"
        style="@style/etxForm"
        android:inputType="textPassword" />

    <Button
        style="@style/btnFormPrimary"
        android:text="@string/title_register"
        android:onClick="signUp" />

</LinearLayout>
